--- a/.trivyignore
+++ b/.trivyignore
@@ -5,3 +5,6 @@
 
 # https://thetradedesk.atlassian.net/browse/UID2-4460
 CVE-2024-47535
+
+# https://thetradedesk.atlassian.net/browse/UID2-5186
+CVE-2024-8176 exp:2025-03-27
