--- a/.trivyignore
+++ b/.trivyignore
@@ -4,3 +4,7 @@
 
 # https://thetradedesk.atlassian.net/browse/UID2-5186
 CVE-2024-8176 exp:2025-06-03
+
+# This is a false positive CVE
+# See: https://thetradedesk.atlassian.net/browse/UID2-5492
+CVE-2022-37767
