Add CVE-2022-37767 to .trivyignore (#466)
* Add CVE-2022-37767 to .trivyignore

* Add CVE-2025-1686 to .trivyignore

--- a/.trivyignore
+++ b/.trivyignore
@@ -4,3 +4,11 @@
 
 # https://thetradedesk.atlassian.net/browse/UID2-5186
 CVE-2024-8176 exp:2025-06-03
+
+# This is a false positive CVE
+# See: https://thetradedesk.atlassian.net/browse/UID2-5492
+CVE-2022-37767
+
+# This is a false positive CVE
+# See: https://thetradedesk.atlassian.net/browse/UID2-5493
+CVE-2025-1686
