--- a/.trivyignore
+++ b/.trivyignore
@@ -12,3 +12,6 @@ CVE-2022-37767
 # This is a false positive CVE
 # See: https://thetradedesk.atlassian.net/browse/UID2-5493
 CVE-2025-1686
+
+# Tracking: https://thetradedesk.atlassian.net/browse/UID2-5864
+CVE-2025-6965
